--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/ironhack-labs/lab-express-mongoose-recipes#readme",
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
